<resources>
    <string name="app_name">医用物资管理</string>
    <string name="login_account_hint">请输入账号</string>
    <string name="login_psw_hint">请输入密码</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_yzm_hint">请输入验证码</string>
    <string name="login_bt_name">登录</string>
    <string name="login_get_psw">记住密码</string>
    <string name="login_forget_psw">忘记密码?</string>
    <string name="login_get_yzm">获取验证码</string>
    <string name="login_ing_yzm">秒后重发</string>
    <string name="login_again_yzm">重发验证码</string>
    <string name="login_phone_type"><![CDATA[验证码登录>>]]></string>
    <string name="login_account_type"><![CDATA[账号密码登录>>]]></string>

    <string name="phone_name">手机号</string>
    <string name="yzm_name">验证码</string>
    <string name="new_psw_name">新密码</string>
    <string name="confirm_psw_name">确认密码</string>
    <string name="new_psw_hint">请输入新密码</string>
    <string name="confirm_psw_hint">请再次输入新密码</string>
    <string name="old_psw_name">原密码</string>
    <string name="old_psw_hint">请输入原密码</string>

    <string name="change_bypsw_type">原密码修改>></string>
    <string name="change_byyzm_type">验证码验证修改>></string>


    <string name="ok_bt_name">确认</string>
    <string name="user_xg_psw">设置密码</string>
    <string name="user_about_us">关于我们</string>
    <string name="user_exit">退出登录</string>
    <string name="choice_ks_hint">科室</string>
    <string name="choice_date_hint">时间</string>
    <!--统计start-->
    <string name="count_name">名称</string>
    <string name="count_units">单位</string>
    <string name="count_spec">规格</string>
    <string name="count_quantity">数量</string>
    <string name="scan_login_ok">确认登录</string>
    <string name="scan_login_no">取消登录</string>
    <string name="scan_info">博尔德登录确认</string>
    <!--统计end-->

    <string name="no_data">暂无数据</string>
    <string name="no_internet">暂无网络</string>


</resources>
