<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">
    <View
        android:id="@+id/count_item_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line_color"
        android:layout_marginStart="@dimen/frame_eight_distance"
        android:layout_marginEnd="@dimen/frame_eight_distance"/>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingStart="@dimen/frame_eight_distance"
        android:paddingEnd="@dimen/frame_eight_distance">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="@dimen/frame_eight_distance"
            android:text="@string/count_name"
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/frame_text_small_size" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/count_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/frame_text_small_size"
            android:gravity="start"
            android:padding="@dimen/frame_eight_distance"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="@dimen/frame_eight_distance"
            android:text="@string/count_units"
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/frame_text_small_size" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/count_item_units"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/frame_text_small_size"
            android:gravity="start"
            android:padding="@dimen/frame_eight_distance"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingStart="@dimen/frame_eight_distance"
        android:paddingEnd="@dimen/frame_eight_distance">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="@dimen/frame_eight_distance"
            android:text="@string/count_spec"
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/frame_text_small_size" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/count_item_spec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/frame_text_small_size"
            android:gravity="start"
            android:padding="@dimen/frame_eight_distance"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="@dimen/frame_eight_distance"
            android:text="@string/count_quantity"
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/frame_text_small_size" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/count_item_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/frame_text_small_size"
            android:gravity="start"
            android:padding="@dimen/frame_eight_distance"/>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>