<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="1dp"
        android:layout_marginBottom="@dimen/frame_two_distance">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <allen.frame.widget.CircleImageView
                android:id="@+id/user_photo"
                android:layout_width="@dimen/frame_title_icon_height"
                android:layout_height="@dimen/frame_title_icon_height"
                app:border_width="0dp"
                app:border_color="@android:color/transparent"
                android:layout_margin="@dimen/frame_32_distance"
                android:src="@mipmap/ic_default_photo"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/frame_text_middle_size"
                android:textColor="@color/text_black_color"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="1dp"
        android:layout_marginTop="@dimen/frame_four_distance"
        android:layout_marginBottom="@dimen/frame_edge_distance"
        app:cardCornerRadius="@dimen/frame_eight_distance">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/user_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@mipmap/ic_psw"
                android:drawableEnd="@mipmap/ic_go"
                android:drawablePadding="@dimen/frame_edge_distance"
                android:gravity="center_vertical"
                android:padding="@dimen/frame_edge_distance"
                android:text="@string/user_xg_psw"
                android:textColor="@color/text_gray_color"
                android:textSize="@dimen/frame_text_middle_size"
                android:background="@drawable/icon_bg_selecor"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@mipmap/ic_info"
                android:drawableEnd="@mipmap/ic_go"
                android:drawablePadding="@dimen/frame_edge_distance"
                android:gravity="center_vertical"
                android:padding="@dimen/frame_edge_distance"
                android:text="@string/user_about_us"
                android:textColor="@color/text_gray_color"
                android:textSize="@dimen/frame_text_middle_size"
                android:background="@drawable/icon_bg_selecor"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="1dp"
        android:layout_marginTop="@dimen/frame_edge_distance"
        android:layout_marginBottom="@dimen/frame_edge_distance"
        app:cardCornerRadius="@dimen/frame_eight_distance">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/user_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/frame_edge_distance"
            android:text="@string/user_exit"
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/frame_text_middle_size"
            android:background="@drawable/icon_bg_selecor"/>
    </android.support.v7.widget.CardView>
</android.support.v7.widget.LinearLayoutCompat>